# maes_microscopy

./: MODELCARD.md  generate_reconstructions.ipynb  huggingface_mae.py  pyproject.toml  requirements.in  requirements.txt  test_huggingface_mae.py
models/phenom_beta_huggingface/: config.json
sample/: AA41_s1_1.jp2  AA41_s1_2.jp2  AA41_s1_3.jp2  AA41_s1_4.jp2  AA41_s1_5.jp2  AA41_s1_6.jp2
