[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maes_microscopy_project"
version = "0.1.0"
authors = [
    {name = "kian-kd", email = "kian.kd@recursionpharma.com"},
    {name = "Laksh47", email = "laksh.arumugam@recursionpharma.com"},
]
requires-python = ">=3.10.4"

dependencies = [
    "huggingface-hub",
    "timm",
    "torch>=2.3",
    "torchmetrics",
    "torchvision",
    "tqdm",
    "transformers",
    "xformers",
    "zarr",
    "hydra-core",
    "pytorch-lightning>=2.1",
    "matplotlib",
    "scikit-image",
    "ipykernel",
    "isort",
    "ruff",
    "pytest",
]

[tool.setuptools]
py-modules = []